@@ -8,6 +8,9 @@
    - markus@cvs.openbsd.org 2001/10/24 08:41:20
      [ssh.c]
      remove unused
+   - markus@cvs.openbsd.org 2001/10/24 08:51:35
+     [clientloop.c ssh.c]
+     ignore SIGPIPE early, makes ssh work if agent dies, netbsd-pr via itojun@
 
 20011109
  - (stevesk) auth-pam.c: use do_pam_authenticate(PAM_DISALLOW_NULL_AUTHTOK)
@@ -6817,4 +6820,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1636 2001/11/11 23:51:40 djm Exp $
+$Id: ChangeLog,v 1.1637 2001/11/11 23:52:03 djm Exp $
